<resources>
    <string name="app_name">Games and News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Games and News</string>
    <string name="nav_header_subtitle">Project UAS Pemrograman Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="labelApps">Details</string>

    <!-- Text Navigation Drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_gamepc">Game PC</string>
    <string name="menu_gameweb">Game Web Browser</string>
    <string name="menu_gamenews">Game News</string>
    <string name="menu_about">About</string>

    <!-- About -->
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>
    <string name="email">Email</string>
    <string name="github">Github</string>
    <string name="moto">Words</string>

    <!-- Maulana -->
    <string name="nama_maulana">Maulana</string>
    <string name="nim_maulana">: 2010817310008</string>
    <string name="email_maulana">: 2010817310008@mhs.ulm.ac.id</string>
    <string name="github_maulana">: maulanaw8</string>
    <string name="moto_maulana">: Start Doing</string>

    <!-- Charles -->
    <string name="nama_charles">Charles Phandurand</string>
    <string name="nim_charles">: 2010817110006</string>
    <string name="email_charles">: 2010817110006@mhs.ulm.ac.id</string>
    <string name="github_charles">: charlesphandurand</string>
    <string name="moto_charles">: Tetap Semangat</string>

</resources>